--- a/template/keepalived.conf
+++ b/template/keepalived.conf
@@ -1,8 +1,8 @@
 vrrp_instance VI {
   state BACKUP
-  interface br0
+  interface ens3
   track_interface {
-    br0
+    ens3
   }
   garp_master_delay 5
   virtual_router_id 11
@@ -10,15 +10,15 @@ vrrp_instance VI {
   nopreempt
   advert_int 1
   unicast_peer {
-    172.18.210.111
-    172.18.210.112
-    172.18.210.113
+    172.18.211.181
+    172.18.211.182
+    172.18.211.183
   }
   authentication {
     auth_type PASS
     auth_pass himitsu
   }
   virtual_ipaddress {
-    172.18.210.101
+    172.18.211.185
   }
 }
