--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,4 @@
-version: '0.1'
+version: '3'
 services:
   floating-ip:
     image: osixia/keepalived:latest
@@ -8,5 +8,5 @@ services:
     - ./template/keepalived.conf:/usr/local/etc/keepalived/keepalived.conf
     cap_add:
     - NET_ADMIN
-    net: "host"
+    network_mode: "host"
 
